tests/0007-assignment-prefix-operator.src.err
tests/0007-assignment-prefix-operator.src:2
ERROR: not yet implemented
 | not a = "value";
           ^
